<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/preferences_actions_title">
    <CheckBoxPreference
        android:key="preferences_play_beep"
        android:defaultValue="true"
        android:title="@string/preferences_play_beep_title"/>
    <CheckBoxPreference
        android:key="preferences_vibrate"
        android:defaultValue="false"
        android:title="@string/preferences_vibrate_title"/>
    <CheckBoxPreference
        android:key="preferences_remember_duplicates"
        android:defaultValue="false"
        android:title="@string/preferences_remember_duplicates_title"
        android:summary="@string/preferences_remember_duplicates_summary"/>
    <CheckBoxPreference
        android:key="preferences_supplemental"
        android:defaultValue="true"
        android:title="@string/preferences_supplemental_title"
        android:summary="@string/preferences_supplemental_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_general_title">
    <ListPreference
        android:entries="@array/preferences_front_light_options"
        android:entryValues="@array/preferences_front_light_values"
        android:key="preferences_front_light_mode"
        android:defaultValue="OFF"
        android:title="@string/preferences_front_light_title"
        android:summary="@string/preferences_front_light_summary"/>
    <CheckBoxPreference
        android:key="preferences_auto_focus"
        android:defaultValue="true"
        android:title="@string/preferences_auto_focus_title"/>
    <CheckBoxPreference
        android:key="preferences_invert_scan"
        android:defaultValue="false"
        android:title="@string/preferences_invert_scan_title"
        android:summary="@string/preferences_invert_scan_summary"/>
    <CheckBoxPreference
        android:key="preferences_bulk_mode"
        android:defaultValue="false"
        android:title="@string/preferences_bulk_mode_title"
        android:summary="@string/preferences_bulk_mode_summary"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/preferences_device_bug_workarounds_title">
    <CheckBoxPreference
        android:key="preferences_disable_continuous_focus"
        android:defaultValue="true"
        android:title="@string/preferences_disable_continuous_focus_title"
        android:summary="@string/preferences_disable_continuous_focus_summary"/>
    <CheckBoxPreference
        android:key="preferences_disable_exposure"
        android:defaultValue="true"
        android:title="@string/preferences_disable_exposure_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_metering"
        android:defaultValue="true"
        android:title="@string/preferences_disable_metering_title"/>
    <CheckBoxPreference
        android:key="preferences_disable_barcode_scene_mode"
        android:defaultValue="true"
        android:title="@string/preferences_disable_barcode_scene_mode_title"/>
  </PreferenceCategory>
</PreferenceScreen>
